--- a/rpm/style.css
+++ b/rpm/style.css
@@ -133,7 +133,12 @@ aside {
   text-align:center;
   font-size:200%;
 }
-
+h1 .amp  {
+  font-size:200%;
+  display: inline-block;
+  margin-left: -30px;
+  margin-right: -20px;
+}
 h3 .amp {
   font-size: 100%;
 }
